# laboratory_test_storage_service

./: .gitignore  README.md  deploy.sh  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
database_files/: create.sql
nginx/conf.d/: app.conf
src/: Dockerfile  m.py  poetry.py  pyproject.toml  requirements.txt
src/app/: alembic.ini  app.py  config.py  exeptions.py  main.py
src/app/api/: __init__.py  auth.py  objects.py  s3.py  test_types.py  tests.py
src/app/database/: __init__.py  create.sql  database.py  tables.py
src/app/migrations/: env.py
src/app/migrations/versions/: 22a333ee12e0_initial_migration.py
src/app/models/: borehole.py  file.py  files.py  object.py  objects.py  sample.py  samples.py  test.py  test_parameter_title.py  test_parameters_titles.py  test_type.py  test_types.py  tests.py  user.py
src/app/services/: auth_service.py  depends.py  file_service.py  object_service.py  s3.py  test_service.py  test_type.py
src/app/static/css/: style.css
src/app/static/js/: app.js  requests.js
src/app/templates/: base.html  header.html  index.html  personal.html
src/app/tests/: conftest.py  test_1_auth.py  test_2_object.py  test_3_test_types.py  test_4_tests.py  test_5_files.py  test_auth.py  test_object.py
