[tool.poetry]
name = "laboratory test storage service"
version = "1.0.0"
description = ""
authors = ["Nick <tnick1502@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiobotocore = "2.7.0"
aiohttp = "3.8.6"
aioitertools = "0.11.0"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
async-timeout = "4.0.3"
asyncpg = "0.28.0"
attrs = "23.1.0"
botocore = "1.31.64"
certifi = "2023.7.22"
charset-normalizer = "3.3.0"
click = "8.1.7"
colorama = "0.4.6"
ecdsa = "0.18.0"
exceptiongroup = "1.1.3"
fastapi = "0.103.2"
fastapi-cache2 = "0.2.1"
frozenlist = "1.4.0"
geoalchemy2 = "0.14.1"
greenlet = "3.0.0"
h11 = "0.14.0"
httpcore = "0.18.0"
httpx = "0.25.0"
idna = "3.4"
iniconfig = "2.0.0"
jinja2 = "3.1.2"
jmespath = "1.0.1"
multidict = "6.0.4"
packaging = "23.2"
passlib = "1.7.4"
pendulum = "2.1.2"
pluggy = "1.3.0"
pyasn1 = "0.5.0"
pydantic = "2.4.2"
pydantic-settings = "2.0.3"
pydantic-core = "2.10.1"
pytest = "7.4.2"
pytest-asyncio = "0.21.1"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-jose = "3.3.0"
python-multipart = "0.0.6"
pytzdata = "2020.1"
redis = "5.0.1"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.22"
starlette = "0.27.0"
tomli = "2.0.1"
typing-extensions = "4.8.0"
urllib3 = "2.0.7"
uvicorn = "0.23.2"
wrapt = "1.15.0"
yarl = "1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
